--- a/Templates/templates/view_templates/about.html
+++ b/Templates/templates/view_templates/about.html
@@ -6,7 +6,7 @@
     <title>About</title>
 </head>
 <body>
-    {% extends 'templates/base.html' %}
+    {% extends 'base.html' %}
     {% block content %}
     <h1>ABOUT</h1>
     {% endblock %}
