--- a/Templates/templates/view_templates/home.html
+++ b/Templates/templates/view_templates/home.html
@@ -6,7 +6,7 @@
     <title>Python templates</title>
 </head>
 <body>
-    {% extends 'templates/base.html' %}
+    {% extends 'base.html' %}
     {% block content %}
     <h1>HOME</h1>
     {% endblock %}
