--- a/Blog_project/templates/base.html
+++ b/Blog_project/templates/base.html
@@ -13,6 +13,7 @@
             <a href="/">Django blog</a>
         </h1>
     </header>
+    <a href="{% url 'post_new' %}">New Blog Post</a>
     <div class="container">
         {% block content %}
         {% endblock %}
