--- a/Blog_project/templates/base.html
+++ b/Blog_project/templates/base.html
@@ -10,10 +10,17 @@
 <body>
     <header>
         <h1>
-            <a href="/">Django blog</a>
+            <a href="/">Django блог</a>
         </h1>
     </header>
-    <a href="{% url 'post_new' %}">New Blog Post</a>
+    {% if user.is_authenticated %}
+        <p>Привет {{ user.username }}</p>
+        <a href="{% url "logout" %}">Выход</a>
+    {% else %}
+        <p>Вы не вошли в аккаунт</p>
+        <a href="{% url "login" %}">Вход</a>
+    {% endif %}
+    <a href="{% url 'post_new' %}">Новый пост</a>
     <div class="container">
         {% block content %}
         {% endblock %}
