--- a/Blog_project/templates/post_detail.html
+++ b/Blog_project/templates/post_detail.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
     {% block content %}
 
-    <a href="{% url 'post_edit' post.pk %}">Edit Blog Post</a>
-    <a href="{% url 'post_delete' post.pk %}">Delte Blog Post</a>
+    <a href="{% url 'post_edit' post.pk %}">Редактировать пост</a>
+    <a href="{% url 'post_delete' post.pk %}">Удалить пост</a>
 
     <div class="post-entry">
         <h2>{{ post.title }}</h2>
