--- a/pr_8/templates/home.html
+++ b/pr_8/templates/home.html
@@ -2,12 +2,12 @@
 {% block title %}Home{% endblock title %}
 
 {% block content %}
-{% if user.is_authenticated %}
-    Hi {{ user.username }}
-    <p><a href="{% url 'logout' %}">logout</a></p>
-{% else %}
-    <p>You are not logged in</p>
-    <a href="{% url 'login' %}">login</a>
-    <a href="{% url 'signup' %}">signup</a>
-{% endif %}
+<div class="jumbotron">
+    <h1 class="display-4">Newspaper app</h1>
+    <p class="lead-4">A Newspaper website build with Django</p>
+    <p class="lead">
+        <a href="{% url 'article_list' %}" class="btn btn-primary btn-lg" role="button">View all articles</a>
+    </p>
+</div>
+
 {% endblock content %}
